--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,11 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "rollup-plugin-copy": "^3.4.0",
+    "@smui-extra/accordion": "^6.0.0-beta.13",
+    "@smui/icon-button": "^6.0.0-beta.13",
+    "@smui/select": "^6.0.0-beta.13",
     "bootstrap": "^5.1.3",
-    "googleapis":"^94.0.0",
+    "googleapis": "^94.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
