--- a/client/package.json
+++ b/client/package.json
@@ -11,24 +11,21 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@tsconfig/svelte": "^2.0.0",
+    "bootstrap": "^5.1.3",
+    "googleapis": "^94.0.0",
     "rollup": "^2.3.4",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "@smui-extra/accordion": "^6.0.0-beta.13",
-    "@smui/icon-button": "^6.0.0-beta.13",
-    "@smui/select": "^6.0.0-beta.13",
-    "bootstrap": "^5.1.3",
-    "googleapis": "^94.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "typescript": "^4.0.0",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^2.0.0"
+    "typescript": "^4.0.0"
   },
   "dependencies": {
     "sirv-cli": "^2.0.0"
