--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.0",
     "googleapis": "^94.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
