--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "svelte-loading-spinners": "^0.1.7",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
