--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,19 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "test": "jest"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
+    "@types/jest": "^28.1.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
-    "googleapis": "^94.0.0",
     "d3": "^7.3.0",
+    "googleapis": "^94.0.0",
     "jest": "^28.1.2",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
@@ -26,10 +28,11 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
     "svelte-loading-spinners": "^0.1.7",
+    "svelte-preprocess": "^4.0.0",
+    "ts-jest": "^28.0.5",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "sirv-cli": "^2.0.0"
