--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
     "@types/jest": "^28.1.4",
+    "@types/lodash.isequal": "^4.5.6",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "d3": "^7.3.0",
@@ -35,6 +36,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "lodash.isequal": "^4.5.0",
     "sirv-cli": "^2.0.0"
   }
 }
