--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
+    "@testing-library/svelte": "^3.1.3",
     "@tsconfig/svelte": "^2.0.0",
     "@types/jest": "^28.1.4",
     "@types/lodash.isequal": "^4.5.6",
@@ -21,6 +22,7 @@
     "d3": "^7.3.0",
     "googleapis": "^94.0.0",
     "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
@@ -29,6 +31,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
+    "svelte-jester": "^2.3.2",
     "svelte-loading-spinners": "^0.1.7",
     "svelte-preprocess": "^4.0.0",
     "ts-jest": "^28.0.5",
