--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "jwt-decode": "^3.1.2",
     "lodash.isequal": "^4.5.0",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-select": "^4.4.7"
   }
 }
