--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "d3": "^7.3.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
+    "less": "^4.1.3",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
@@ -32,6 +33,7 @@
     "svelte-check": "^2.0.0",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.0.0",
+    "svelte-preprocess-less": "^0.4.0",
     "ts-jest": "^28.0.5",
     "tslib": "^2.0.0",
     "typescript": "^4.7.4"
