--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "lodash.clone": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "sirv-cli": "^2.0.0",
+    "svelte-carousel": "^1.0.19",
     "svelte-select": "^4.4.7"
   }
 }
