--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es2019"
+        "target": "es2019",
+        "allowSyntheticDefaultImports": true
     }
 }
