--- a/template.yaml
+++ b/template.yaml
@@ -33,7 +33,7 @@ Resources:
     Properties:
       Name: !Sub "${cloudFrontAlias}"
       Type: A
-      HostedZoneName: !Sub "${hostedZoneId}"
+      HostedZoneId: !Sub "${hostedZoneId}"
       AliasTarget:
         #this hardcoded value is always the case https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html
         HostedZoneId: "Z2FDTNDATAQYW2"
