--- a/template.yaml
+++ b/template.yaml
@@ -35,8 +35,7 @@ Resources:
       Type: A
       HostedZoneId: !Sub "${hostedZoneId}"
       AliasTarget:
-        #this hardcoded value is always the case https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html
-        HostedZoneId: "Z2FDTNDATAQYW2"
+        HostedZoneId: "Z2FDTNDATAQYW2" #this hardcoded value is always the case https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html
         DNSName: !GetAtt WebAppCDN.DomainName
   CloudFrontOriginAccessIdentity:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
