aws-migration: cognito identity pool automation added

--- a/template.yaml
+++ b/template.yaml
@@ -36,11 +36,79 @@ Parameters:
     Description: ""
     Type: String
     Default: "arn:aws:acm:eu-central-1:537602986733:certificate/6d7733eb-fff5-4c6e-b06d-01868a79e108"
-
+  googleAuthClientId:
+    Description: ""
+    Type: String
+    Default: "584519661541-m7jkpf0o4cu08jpiq4eo4bmaoa6ah7j1.apps.googleusercontent.com"
 
 Resources:
+  CognitoId:
+    Type: "AWS::Cognito::IdentityPool"
+    Properties:
+      AllowUnauthenticatedIdentities: false
+      IdentityPoolName: "stemma-identity-pool"
+      SupportedLoginProviders: { "accounts.google.com": !Sub "${googleAuthClientId}" }
+  CognitoUnauthRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: stemma_unauth_role
+      Path: /
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Action:
+              - "sts:AssumeRoleWithWebIdentity"
+            Condition: { "ForAnyValue:StringLike": { "cognito-identity.amazonaws.com:amr": "authenticated" },  "StringEquals": { "cognito-identity.amazonaws.com:aud": !Ref CognitoId } }
+            Principal:
+              Federated:
+                - "cognito-identity.amazonaws.com"
+      Policies:
+        - PolicyName: "CognitoUnauthorizedPolicy"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: "Allow"
+                Action:
+                  - "cognito-sync:*"
+                  - "cognito-identity:*"
+                Resource: "*"
+
+  CognitoAuthRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      RoleName: stemma_auth_role
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Action:
+              - "sts:AssumeRoleWithWebIdentity"
+            Condition: { "ForAnyValue:StringLike": { "cognito-identity.amazonaws.com:amr": "authenticated" },  "StringEquals": { "cognito-identity.amazonaws.com:aud": !Ref CognitoId } }
+            Principal:
+              Federated:
+                - "cognito-identity.amazonaws.com"
+      Policies:
+        - PolicyName: main
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: "Allow"
+                Action:
+                  - "cognito-sync:*"
+                  - "cognito-identity:*"
+                Resource: "*"
+  IdentityPoolRoleAttachment:
+    Type: "AWS::Cognito::IdentityPoolRoleAttachment"
+    Properties:
+      IdentityPoolId: !Ref CognitoId
+      Roles:
+        authenticated:
+          Fn::GetAtt: [CognitoAuthRole, Arn]
+        unauthenticated:
+          Fn::GetAtt: [CognitoUnauthRole, Arn]
   assetsDnsRecord:
-    DependsOn:  WebAppCDN
+    DependsOn: WebAppCDN
     Type: AWS::Route53::RecordSet
     Properties:
       Name: !Sub "${cloudFrontAlias}"
@@ -90,8 +158,7 @@ Resources:
     Properties:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
-          -
-            ServerSideEncryptionByDefault:
+          - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
   BucketPolicy:
     Type: AWS::S3::BucketPolicy
