--- a/template.yaml
+++ b/template.yaml
@@ -181,7 +181,7 @@ Resources:
     Metadata:
       BuildMethod: makefile
     Properties:
-      Handler: io.github.salamahin.stemma.apis.serverless.aws.HelloWorld::helloWorldRequest
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.HelloWorld::apply
       Events:
         AdminExhibition:
           Type: HttpApi
