--- a/template.yaml
+++ b/template.yaml
@@ -14,6 +14,7 @@ Globals:
         JDBC_URL: "{{resolve:secretsmanager:prod/jdbc:SecretString:JDBC_URL}}"
         JDBC_USER: "{{resolve:secretsmanager:prod/jdbc:SecretString:JDBC_USER}}"
         JDBC_PASSWORD: "{{resolve:secretsmanager:prod/jdbc:SecretString:JDBC_PASSWORD}}"
+        INVITE_SECRET: "{{resolve:secretsmanager:prod/invite:SecretString:INVITE_SECRET}}"
     Layers:
       - !Ref MyLayer
 
@@ -116,14 +117,14 @@ Resources:
                 - !Ref appbucket
                 - /*
       Bucket: !Ref appbucket
-#  autosetloggroupretention:
-#    Type: AWS::Serverless::Application
-#    Properties:
-#      Location:
-#        ApplicationId: arn:aws:serverlessrepo:us-east-1:374852340823:applications/auto-set-log-group-retention
-#        SemanticVersion: 1.5.0
-#      Parameters:
-#       RetentionDays: 1
+  #  autosetloggroupretention:
+  #    Type: AWS::Serverless::Application
+  #    Properties:
+  #      Location:
+  #        ApplicationId: arn:aws:serverlessrepo:us-east-1:374852340823:applications/auto-set-log-group-retention
+  #        SemanticVersion: 1.5.0
+  #      Parameters:
+  #       RetentionDays: 1
   AccessLogs:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -179,19 +180,149 @@ Resources:
       RetentionPolicy: Delete
     Metadata:
       BuildMethod: makefile
-  HelloWorldFunction:
+  ListStemmasFunction:
     Type: AWS::Serverless::Function
     Metadata:
       BuildMethod: makefile
     Properties:
-      Handler: io.github.salamahin.stemma.apis.serverless.aws.HelloWorld::apply
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.ListStemmas::apply
       Events:
         AdminExhibition:
           Type: HttpApi
           Properties:
             ApiId: !Ref MyApi
-            Path: /hello-world
+            Path: /stemmas
             Method: get
+  DeleteStemmaFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.DeleteStemma::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /stemma
+            Method: delete
+  CreateNewStemmaFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.CreateNewStemma::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /stemma
+            Method: post
+  StemmaFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.Stemma::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /stemma
+            Method: get
+  DeletePersonFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.DeletePerson::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /person
+            Method: delete
+  UpdatePersonFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.UpdatePerson::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /person
+            Method: put
+  CreateInvitationTokenFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.CreateInvitationToken::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /invite
+            Method: get
+  BearInvitationTokenFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.BearInvitationStemma::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /invite
+            Method: post
+  CreateFamilyFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.CreateFamily::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /family
+            Method: post
+  UpdateFamilyFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.UpdateFamily::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /family
+            Method: put
+  DeleteFamilyFunction:
+    Type: AWS::Serverless::Function
+    Metadata:
+      BuildMethod: makefile
+    Properties:
+      Handler: io.github.salamahin.stemma.apis.serverless.aws.DeleteFamily::apply
+      Events:
+        AdminExhibition:
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref MyApi
+            Path: /family
+            Method: delete
 
 Outputs:
   ApiEndpoint:
